--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@nuxt/test-utils": "^3.13.1",
         "@nuxtjs/color-mode": "^3.4.1",
         "@pinia/nuxt": "^0.5.1",
+        "@testing-library/vue": "^8.1.0",
         "@unocss/eslint-config": "^0.60.0",
         "@unocss/nuxt": "^0.60.0",
         "@vite-pwa/nuxt": "^0.7.0",
